--- a/ui_mapcreater.ui
+++ b/ui_mapcreater.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>mapcreater</class>
+ <widget class="QMainWindow" name="mapcreater">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Map Creater</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -36,6 +36,7 @@
     </property>
     <addaction name="actionNew"/>
     <addaction name="actionExport"/>
+    <addaction name="separator"/>
     <addaction name="actionClose"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -56,7 +57,7 @@
     <enum>LeftToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <addaction name="actionDrawMap"/>
    <addaction name="actionDrawRoute"/>
@@ -127,6 +128,9 @@
    <property name="text">
     <string>New</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="actionPen">
    <property name="checkable">
@@ -154,12 +158,12 @@
   <connection>
    <sender>actionClose</sender>
    <signal>triggered()</signal>
-   <receiver>MainWindow</receiver>
+   <receiver>mapcreater</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>81</x>
-     <y>61</y>
+     <x>-1</x>
+     <y>-1</y>
     </hint>
     <hint type="destinationlabel">
      <x>399</x>
